--- a/app/globals.css
+++ b/app/globals.css
@@ -54,6 +54,9 @@
 }
 
 /* ==== clerk class override ===== */
+.cl-providerIcon {
+filter: invert(1);
+}
 
 .cl-userButtonPopoverActionButtonIcon {
   color: white;
